# pik-vision

./: .gitignore  README.md  docker-compose.yml  index.py  pyproject.toml
pik_vision/: app.py  pyproject.toml
pik_vision/pik_vision/: app.py  schemas.py
pik_vision/sql_app/: database.py
pik_vision/tests/: conftest.py  test_app.py  test_db.py
pik_vision_venv/: pyvenv.cfg
